# braingenix_api-052325

./: LICENSE
Braingenixapi_clone/: CMakeLists.txt  README.md  vcpkg.json
Braingenixapi_clone/CI/: .gitlab-ci.yml
Braingenixapi_clone/CI/Deploy/: Prod.yml
Braingenixapi_clone/CMake/: PythonVersion.h.in
Braingenixapi_clone/CMake/BuildUtils/: Backward.cmake  Filesystem.cmake
Braingenixapi_clone/CMake/Scripts/CompilePlatformInfo/: CompilePlatformInfo.cmake
Braingenixapi_clone/CMake/Scripts/CompileTimeStamp/: CompileTimeStamp.cmake
Braingenixapi_clone/CMake/Scripts/LinuxBundle/: LinuxBundle.cmake
Braingenixapi_clone/CMake/Scripts/VersioningSystem/: VersioningSystem.cmake
Braingenixapi_clone/Docs/: API.md  NESAPI.md  README.md  StatusPage.md
Braingenixapi_clone/Docs/Doxygen/Source/: Doxyfile
Braingenixapi_clone/Source/Core/: CMakeLists.txt  Main.cpp  Main.h
Braingenixapi_clone/Source/Core/Config/: ArgumentParser.cpp  ArgumentParser.h  Config.h  ConfigDefaults.h  ConfigFileParser.cpp  ConfigFileParser.h  ConfigurationManager.cpp  ConfigurationManager.h
Braingenixapi_clone/Source/Core/Database/: DBManager.cpp  DBManager.h
Braingenixapi_clone/Source/Core/NeuroglancerWrapper/: NeuroglancerWrapper.cpp  NeuroglancerWrapper.h
Braingenixapi_clone/Source/Core/RPC/: APIStatusCode.cpp  APIStatusCode.h  ClientManager.cpp  ClientManager.h  ManagerTaskData.cpp  ManagerTaskData.h  RPCHandlerHelper.cpp  RPCHandlerHelper.h  RPCManager.cpp  RPCManager.h  RouteAndHandler.h  StaticRoutes.cpp  StaticRoutes.h
Braingenixapi_clone/Source/Core/Resource/: Forbidden.cpp  Forbidden.h  Hello.cpp  Hello.h  NotFound.cpp  NotFound.h  Root.cpp  Root.h  Status.cpp  Status.h  Version.cpp  Version.h
Braingenixapi_clone/Source/Core/Resource/Auth/: GetToken.cpp  GetToken.h
Braingenixapi_clone/Source/Core/Resource/Dataset/: Dataset.cpp  Dataset.h
Braingenixapi_clone/Source/Core/Resource/EVM/: EVM.cpp  EVM.h
Braingenixapi_clone/Source/Core/Resource/NES/: NES.cpp  NES.h
Braingenixapi_clone/Source/Core/Resource/NES/Geometry/Shape/: BoxCreate.cpp  BoxCreate.h  BulkBoxCreate.cpp  BulkBoxCreate.h  BulkCylinderCreate.cpp  BulkCylinderCreate.h  BulkSphereCreate.cpp  BulkSphereCreate.h  CylinderCreate.cpp  CylinderCreate.h  SphereCreate.cpp  SphereCreate.h
Braingenixapi_clone/Source/Core/Resource/NES/VSDA/Calcium/: CreateIndicator.cpp  CreateIndicator.h  DefineScanRegion.cpp  DefineScanRegion.h  GetImage.cpp  GetImage.h  GetImageStack.cpp  GetImageStack.h  GetRenderStatus.cpp  GetRenderStatus.h  QueueRenderOperation.cpp  QueueRenderOperation.h  Setup.cpp  Setup.h
Braingenixapi_clone/Source/Core/Resource/NES/VSDA/EM/: DefineScanRegion.cpp  DefineScanRegion.h  GetImage.cpp  GetImage.h  GetImageStack.cpp  GetImageStack.h  GetRenderStatus.cpp  GetRenderStatus.h  Initialize.cpp  Initialize.h  QueueRenderOperation.cpp  QueueRenderOperation.h  SetupMicroscope.cpp  SetupMicroscope.h
Braingenixapi_clone/Source/Core/Resource/NES/Visualizer/: RenderImage.cpp  RenderImage.h
Braingenixapi_clone/Source/Core/Server/: Controller.cpp  Controller.h  Endpoints.cpp  Endpoints.h  Server.cpp  Server.h
Braingenixapi_clone/Source/Core/Util/: ParamCheck.cpp  ParamCheck.h  RPCHelpers.cpp  RPCHelpers.h  RestbedHelpers.cpp  RestbedHelpers.h  Types.cpp  Types.h
Braingenixapi_clone/Source/Data/: API.cfg  BrainGenix-API.service  conffiles  postinst  prerm
Braingenixapi_clone/Source/Interface/Configuration/CompilePlatformInfo/: ERS_CompilePlatformInfo.h
Braingenixapi_clone/Source/Interface/Configuration/CompileTimeStamp/: ERS_CompileTimeStamp.h
Braingenixapi_clone/Test/: .gitignore  HappyHolidays.py  POSTTest.py  Test.json  Test.py  TestLocal.py
Braingenixapi_clone/Tools/: Build.sh  Clean.sh  DevRun.sh  Run.sh  Setup.sh  Test.sh
Braingenixapi_clone/Tools/Deploy/: Deploy.sh
Braingenixapi_clone/Tools/Package/: Debian-Install.sh
